Week 6 day 1 journal

--- a/reflections/week06/01.md
+++ b/reflections/week06/01.md
@@ -8,12 +8,20 @@
 
 1. What is ***Component-Based Architecture***?
 
+Component Based Architecture is a type of framework used by developers to help encapsulate different segments of code into smaller pieces making them easier to work with.
+
 2. What are some benefits of Component-Based Architecture?
+
+Some of the benefits are readability, and division of responsibility of the different parts of the application. Components also have a function of reusability as they can be placed multiple times within an application or even other applications if it makes sense.
 
 3. What are some drawbacks to Component-Based Architecture?
 
+Some drawbacks are that components can become over used and if every single thing is converted into a component in your application it can lead to degrade in your readability and comprehension which is the exact opposite of the purpose of components in the first place.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/jsphbowers/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/jsphbowers/vue-playground)**
 
 Identify at least 1 takeaway from today's assignment
+
+Having the playground to test out the different process and abilities of Vue was helpful to learn the basics of what Vue can do for our applications.
