Week 6 day 2 Journal

--- a/reflections/week06/02.md
+++ b/reflections/week06/02.md
@@ -8,12 +8,20 @@
 
 1. What are ***props***?
 
+Props are the data that is passed from a page to a component so that the component has the materials it needs to build out its contents.
+
 2. What are props used for?
+
+Props are used to build out components with data that is being sent to the page.
 
 3. Where can props be used or accessed?
 
+Props can be accessed in the return of a component where they are passed down from the main page.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/jsphbowers/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/jsphbowers/gifted)**
 
 Identify at least 1 takeaway from today's assignment
+
+It was really helpful revisiting the gifted site and seeing how Vue can help in making that website a lot easier to make.
