Week 6 day 3 journal

--- a/reflections/week06/03.md
+++ b/reflections/week06/03.md
@@ -8,12 +8,20 @@
 
 1. What are ***lifecycle hooks***? What are lifecycle hooks used for?
 
+Lifecycle hooks are simple computed states within vue that helps with the website maintaining a reactive state where if something changes then the website will live update.
+
 2. How have you used lifecycle hooks in your afternoon projects?
+
+Using lifecycle hooks will help with getting information to the page and making changes that will help the overall function of hte page.
 
 3. What are ***mounting hooks***? When might you use them?
 
+Mounting hooks can help with the initial load of the page or when changing pages within the site.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/jsphbowers/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/jsphbowers/spring23_gregslist_vue)**
 
 Identify at least 1 takeaway from today's assignment
+
+Doing more of the practice with Gregslist has really helped me to practice the uses of Vue which helped a lot with my overall understanding of how components and vue works.
