Week 6 day 4 journal

--- a/reflections/week06/04.md
+++ b/reflections/week06/04.md
@@ -8,12 +8,19 @@
 
 1. What is a **nested route***?
 
+A nested route is a route within vue where it can be used to navigate between pages within the application itself. You cannot use the nested route to move to external pages but you can navigate around pages within.
+
 2. When might you use a nested route? (other than the provided example)
+
+When you want to help a user navigate around the site and visit different pages.
 
 3. Can you pass parameters through nested routes? When might you use them?
 
+parameters can be used when you are wanting to navigate to a page within the application and go to something specific like a profile page or an account page.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/jsphbowers/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/jsphbowers/World-Travel-Blog)**
 
 Identify at least 1 takeaway from today's assignment
+Seeing the world travel blog it was a little intimidating at first but then using vue it really helped me understand how making different pages and using those components on those pages was really helpful.
