--- a/reflections/week06/05.md
+++ b/reflections/week06/05.md
@@ -6,3 +6,6 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 - What did you learn that was a shock or surprise?
 - What are you struggling with?
 - What would you count as a victory?
+
+
+Vue was intimidating at the beginning of the week but by the time we reached the checkpoint I felt I had a much better handle on how it worked. I've found that I have struggled with keeping up on the journals and quizzes so I want to try to do a better job of staying on top of it next week.
