Week 7 day 1&2 journal

--- a/reflections/week07/01.md
+++ b/reflections/week07/01.md
@@ -8,9 +8,15 @@
 
 1. What is ***pair programming***? What are the roles and how do they work?
 
+Pair programming is when two developers work side by side on coding together. One is the driver while the other is the navigator. The driver is writing the code and speaking out loud about what he is writing while the navigator is verbally communicating and helping to write that code.
+
 2. What are some benefits of pair programming?
 
+Pair coding helps with the quality of the code as you have 2 people looking at coherency rather than one person thinking it makes sense.
+
 3. What are some drawbacks to pair programming?
+
+It can cause some slower steps in coding where obviously you only have one person writing instead of 2 people writing at the same time.
 
 ## Afternoon Assignment Link
 
