--- a/reflections/week07/02.md
+++ b/reflections/week07/02.md
@@ -8,9 +8,17 @@
 
 1. What is ***code documentation***? What are some of the ways to document code?
 
+Code Documentation is a way for you to keep track of what you are doing with your code and also a way for you to leave a blueprint or explanation for others who may be interacting with your code.
+
+We can use JSDoc as one source of documentation, 
+
 2. What are some benefits of code documentation?
 
+It helps you to remember how certain parameters and segments of code work for you. It can be hard sometimes to come back to older code and understand what you were trying to do a couple weeks ago vs now. It can also be beneficial for others who may need to work in the code or who may have to take over the code from you.
+
 3. How important is code documentation and why?
+
+Code documentation can be very important as it helps us to communicate and make our code more usable all around with ourselves and others. It can also help with our overall quality of code as it gives us a lot of helpful tips and hints.
 
 ## Afternoon Assignment Link
 
