--- a/reflections/week07/03.md
+++ b/reflections/week07/03.md
@@ -8,9 +8,15 @@
 
 1. What is the ***user experience***? What should be considered when developing to create a good UX?
 
+The user experience is how someone feels as they navigate their way through our website. We should consider all the different situations in how they may be approaching the site, ie using a laptop or phone or tablet and also what the path and flow may look like for them to open the site and eventually check out and leave the site.
+
 2. What are some benefits of taking into account the user experience?
 
+Taking into account the user experience can hep us to understand what the user may be thinking and in turn can help us in creating more tests and understanding different paths or abilities that we might want to implement on our site.
+
 3. Why is the user experience important?
+
+Ultimately the user is the whole reason we are making an application. There is a level of development where we may be making a product for ourselves but in the end it is the people who are using our application that are the reason we made one in the first place.
 
 ## Afternoon Assignment Link
 
