--- a/reflections/week07/04.md
+++ b/reflections/week07/04.md
@@ -6,9 +6,15 @@
 
 1. Which principles from this week's readings did you implement?
 
+Thinking about the user and how they would interact with the app really helped me to focus on different aspects and address how the user might interact with the app overall.
+
 2. What went well this week?
 
+I feel like my styling and my ability to timebox myself really helped me this week. I was feeling the stressors of the assignment but at the same time I was feeling good about where I was at in the overall assignment.
+
 3. What would you do differently?
+
+I think I would focus in on the many to many relationships and how they would effect me in the assignment.
 
 ## Afternoon Assignment Link
 
