--- a/reflections/week07/05.md
+++ b/reflections/week07/05.md
@@ -6,3 +6,6 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 - What did you learn that was a shock or surprise?
 - What are you struggling with?
 - What would you count as a victory?
+
+
+This week was a lot of work. Looking back I was happy with how the overall week panned out. It was fun to wake up each day and head to work and when I was done I felt a sense of accomplishment and I liked the work I put in.
