--- a/reflections/week08/01.md
+++ b/reflections/week08/01.md
@@ -8,9 +8,15 @@
 
 1. What function does a ***developer portfolio*** provide?
 
+Helps to create visibility making you known, it also helps to show you know your craft. It can also help to show off previous work.
+
 2. What makes a developer portfolio effective?
 
+Keeping it simple and easy to navigate so that whoever is looking at it has an easy time looking around at all the different information.
+
 3. What projects do you have that you would include in your portfolio? Why?
+
+I would include the tower Event project. And our capstone in the portfolio as well. I think this information is really cool to see and shows that I have knowledge on how to develop a lot of different skills.
 
 ## Afternoon Assignment Link
 
