--- a/reflections/week08/02.md
+++ b/reflections/week08/02.md
@@ -8,9 +8,15 @@
 
 1. Why is communication on a small team important?
 
+Communication helps to ensure that we are not running into each other when working on the code and creating merge conflicts. It also helps us to create something good and ensure that we are all working towards the same vision.
+
 2. What adjustments from traditionally sized scrum teams need to be made to use the Agile methodology effectively in a small team?
 
+Determining how to utilize the Agile methodology for a smaller team can help a lot with versatility. One way to adjust is to make some things shorter and more frequent as we are able to move a lot more in a more effective manner.
+
 3. What is the ***unattainable triangle***? What are the tradeoffs of each side?
+
+Good service cheap will not be fast, Fast service good will not be cheap, and fast service cheap will not be good. This paradox is something a lot of people will find when they look at different builds.
 
 ## Afternoon Assignment Link
 
