--- a/reflections/week08/03.md
+++ b/reflections/week08/03.md
@@ -8,9 +8,15 @@
 
 1. What is ***software development testing***?
 
+Software development testing is taking a simple small piece of testing software and then testing it before proceeding which helps with not having to develop a lot of information just to test a small thing.
+
 2. What are the benefits of testing in software development?
 
+It helps with documentation, keeping track of information and saving time in the long run as you are testing small rather than running into issues and having to back pedal a lot.
+
 3. What are some potential drawbacks of testing in software development?
+
+Testing has a lot of cost associated with it and it can add a lot of time to projects if not executed correctly where it can be hard to see the benefits of the time saved when you are busy writing so many tests.
 
 ## Afternoon Assignment Link
 
