--- a/reflections/week08/04.md
+++ b/reflections/week08/04.md
@@ -8,9 +8,15 @@
 
 1. What are the three main types of testing we can accomplish in Vue? What does each method provide?
 
+Unit testing, component testing, and end to end testing. Unit testing helps to provide the ability to test different segments of code individually without having to recreate a bunch of things. Component testing allows you to test components that have not been mounted to the dom yet to ensure they are working before attaching to the main code. End to end testing is the final testing where you are making sure a user is able to use the website or application from beginning to end as an end user.
+
 2. What testing method do you think is the most useful? Why?
 
+Unit testing I think is the most useful as if you can get each segment to work then the end to end should be a breeze to finish the project off.
+
 3. What testing method do you think is the least useful? Why?
+
+Component testing while being really useful may not be always needed because technically someone could never use components if they wanted to.
 
 ## Afternoon Assignment Link
 
