--- a/reflections/week08/05.md
+++ b/reflections/week08/05.md
@@ -6,3 +6,6 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 - What did you learn that was a shock or surprise?
 - What are you struggling with?
 - What would you count as a victory?
+
+
+This week has been a really good one. Getting started on the capstone it feels like we have made a lot of progress. It was a little daunting at first but overall I think we have a great team and we are going to get a great project finished.
