Week 8 day 1 and 2 journals

--- a/reflections/week09/01.md
+++ b/reflections/week09/01.md
@@ -6,9 +6,15 @@
 
 1. What technologies and principles are you using in your project?
 
+We are utilizing a lot of vue and our knowledge about how to access APIs and get information. It has been really cool seeing all of our knowledge coming together.
+
 2. What went well so far?
 
+So far our structure has been really good and our workflow has gone really well. We have been getting a lot of progress and we have even reached a lot of our feature rich goals which has been awesome.
+
 3. What would you do differently? Why?
+
+Honestly, not much. Working on our Trello and utilizing it more I think that might help a lot as far as planning and coming up with more ideas to use on the project.
 
 ## Afternoon Assignment Link
 
