--- a/reflections/week09/02.md
+++ b/reflections/week09/02.md
@@ -8,9 +8,15 @@
 
 1. What is a ***Github action*** and how do they work?
 
+A Github action are different tools that github offers that can help with different facets of github. It can help a lot with deployment of projects or with manipulating data and how it is handled.
+
 2. What benefits do Github actions provide?
 
+Github actions can help with access as far as who can see what, it can also help with setting up notifications for when people star or pull your code.
+
 3. What types of ***trigger actions*** can a workflow use? What do they do?
+
+Workflow, Scheduled, Webhooks, External. All of these trigger actions are used for different actions where they trigger when different events happen. One might be triggered when someone forks or clones the code down. This can help with setting up how we want the code to deploy or how we want certain things to run on the code.
 
 ## Afternoon Assignment Link
 
