Week 9 day 3 journal

--- a/reflections/week09/03.md
+++ b/reflections/week09/03.md
@@ -10,9 +10,15 @@
 
 1. What is a ***Base64 encoded image***?
 
+A Base64 encoded image is an image that is encoded directly into the HTML so that when the page loads it uses the HTML to load the image rather than loading from a reference.
+
 2. What are the drawbacks of using Base64 encoding?
 
+It can be really burdensome on your computer as most of these files are actually twice the size of a typical photo image.
+
 3. Why are these drawbacks issues in this day and age versus in the past?
+
+In the past when internet speeds were a lot slower it was really important to try to do as much computing and rendering on your machine vs using the internet because your machine was typically faster and could handle a lot more information. Now with faster internet and more optimized web browsers we can load multiple things at the same time which helps a lot and makes some old methods obsolete.
 
 ## Afternoon Assignment Link
 
