week 9 day 4 journal

--- a/reflections/week09/04.md
+++ b/reflections/week09/04.md
@@ -8,9 +8,15 @@
 
 1. What is an ***SSL certificate***?
 
+A SSL certificate is something you can obtain for your website that will make sure the connection between the user and the server is secure and their information can't be taken or hacked.
+
 2. What are the different types of certificates? What are they used for?
 
+There is an EV, OV SSL, DV, Wildcard, and Unified and Single domain certificates. Each of these certificates give different levels of security and others allow you to have the security passed between and among different parts of a domain or multiple sites.
+
 3. What are some benefits of using SSL certificates?
+
+SSL certificates help to keep your website secure and to keep your users secure as well. Another benefit is that SEO (search engine optimization), is helped by obtaining these certificates as google will rank a site higher that has these certificates.
 
 ## Afternoon Assignment Link
 
