Week 9 day 5 journal

--- a/reflections/week09/05.md
+++ b/reflections/week09/05.md
@@ -7,3 +7,10 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 - What did you learn that was a shock or surprise?
 - What are you struggling with?
 - What would you count as a victory?
+
+
+This week was a really good one. I feel like working on the capstone on such an amazing team was really helpful in getting a feel for what a team structure might look like in the work place. It was awesome working with such amazing coders. Our project turned out great and I believe that all of us were really happy with it. 
+
+I did get a feeling that I may have lagged behind the others in my abilities and may need to brush up on a few concepts. I also noticed that being the scrum master and helping to make sure everyone was taking breaks and maintaining a sense of sanity while working on the project was actually a lot of fun. I've been told by a couple of my peers outside of codeworks that they could see me being either the person on the team who helps communicate the ideas between a project and the dev team or being a lead on a team who helps to keep a team moving and stay organized and I think this week really helped me see that as a strength.
+
+It was awesome work this week and I am excited about the projects to come. I feel i may need to brush up on backend and using postman as it has been a minute and I found myself working a lot on the front end this project.
