--- a/reflections/week10/01.md
+++ b/reflections/week10/01.md
@@ -8,15 +8,21 @@
 
 1. What are the three categories of data types? How are they different?
 
-
+Value type, reference type and pointer type. The value type is a data type where it represents an actually stored value, the reference type references a place that is stored in the ram that has the actual value and the pointer type directs you to a reference which then helps to pull up the actual value associated you can declare if the pointer is a type or void.
 
 2. What are the ***value-type*** data types? What differences do you notice from JavaScript?
 
+bool, byte, char, decimal, double, enum, float, int, long, sbyte, short, struct, uint, ulong, ushort, I noticed that there are a lot of the same data types but there are a few different ones. I noticed that there are also a lot of types that are more focused on memory space rathe than functionality.
+
 3. In your own words how do ***reference types*** get stored in memory? How does this differ from value types?
+
+Reference types don't actually store the value directly within their location within a program but instead are just a reference to the address where the data is actually stored.
 
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/jsphbowers/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/jsphbowers/ToDoList)**
 
 Identify at least 1 takeaway from today's assignment
+
+Making a simple to do list and getting some work in SQL was really helpful to start building the foundations of what and how SQL works.
