--- a/reflections/week10/02.md
+++ b/reflections/week10/02.md
@@ -8,12 +8,20 @@
 
 1. What is a `List` in C#?
 
+A list is an object that can be manipulated that holds a list of items within.
+
 2. What `List` methods seem like you might use them often? Why?
+
+List.Add seems like it would be pretty useful for putting lists together. List.Find seems helpful for finding information. List.Remove also seems helpful for taking items off of a list.
 
 3. How would you retrieve an item from a `List`? What method could you use?
 
+List.Find[index]
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/jsphbowers/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/jsphbowers/spring23_gregslist_cSharp)**
 
 Identify at least 1 takeaway from today's assignment
+
+Goooooood ole Gregslist, I freaking love me some Gregslist, the opportunity to repeat the process of SQL is super helpful to reinforce habits and learn how to get the code to function.
