--- a/reflections/week10/03.md
+++ b/reflections/week10/03.md
@@ -8,12 +8,21 @@
 
 1. In a SQL table, what is the difference between information in a row and information in a column?
 
+Information in a row can be considered a single object or an instance of a unit of data that has been added to a table. The column is an identifier/a filter that can be used to pull multiple objects from a table.
+
 2. Demonstrate the basic structure for creating a new table called "characters" with the values "name, age, description" as strings, and an `int` id.
+
+CREATE TABLE IF NOT EXISTS characters (
+  id INT NOT NULL PRIMARY KEY AUTO_INCREMENT COMMENT 'primary key'
+  name VARCHAR(255) NOT NULL
+  age SMALLINT NOT NULL
+  description VARCHAR(600) NOT NULL
+)
 
 3. What are the difference between the following statements: 
 ```sql
-DELETE FROM table_name;
-DROP TABLE table_name;
+DELETE FROM table_name; - this function will remove a row from the table and delete it.
+DROP TABLE table_name; - this will drop/delete the entire table out of the database removing everything.
 ```
 
 ## Afternoon Assignment Link
