Week 10 Day 4 and 5 journals

--- a/reflections/week10/05.md
+++ b/reflections/week10/05.md
@@ -6,3 +6,5 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 - What did you learn that was a shock or surprise?
 - What are you struggling with?
 - What would you count as a victory?
+
+This week has been good as far as what we are learning and really showing us that we can tackle new languages pretty quickly. It was a little daunting at first learning c# and SQL at the same time and only in a weeks time but it was amazing to see how far we've come at this point.
