--- a/reflections/week10/04.md
+++ b/reflections/week10/04.md
@@ -8,9 +8,15 @@
 
 1. What is an ***Enum***, and what are some use cases for them?
 
+Enums are hard coded values where you can assign nicknames or reference names for the different Enums created. The other thing is that an Enum cannot be overridden or changed value by something with the same name.
+
 2. How can you modify an Enum?
 
+You can modify the base type of an Enum and change the value if the default starting value of 0 doesn't make sense for you applications.
+
 3. How have you used Enums in your afternoon lab projects this far? (if you have not yet, give an example of how you could.)
+
+I have not used an Enum yet but you could use one for reading the data off of a form and putting that data into a library for the user to reference later.
 
 ## Afternoon Assignment Link
 
