--- a/reflections/week11/02.md
+++ b/reflections/week11/02.md
@@ -8,7 +8,11 @@
 
 1. What is the difference between a `PRIMARY KEY` and a `FOREIGN KEY`
 
+A primary key is the direct parent key that identifies a table and relates it to other tables.
+
 2. What is an ***alias***?
+
+Aliases are names that we give an instance of a table after the first declaration of that table. Such as calling to accounts and then immediately afterwards putting acct as the alias to reference accounts.
 
 3. Demonstrate how you would query a join statement that would get all of a doctors patients from the following collections:
 
@@ -35,6 +39,12 @@ CREATE TABLE doctors (
   FOREIGN KEY (patientId)
     REFERENCES patients(id),
 )
+
+SELECT 
+doc.*,
+pat.*
+FROM patients pat
+JOIN doctors doc ON doctorId = patientId
 
 ```
 
