--- a/reflections/week11/03.md
+++ b/reflections/week11/03.md
@@ -8,9 +8,15 @@
 
 1. What is SQL injection?
 
+This is when an attacker can insert SQL information into the database and can manipulate or gain access with nothing blocking them.
+
 2. What are 3 methods SQL injection can be done by?
 
+There are direct input attacks, second order and server variables are all different forms of attacks.
+
 3. How can we detect and sanitize SQL injection attacks?
+
+You can follow OWASP principles and use their cheat sheet to determine what the best methods are.
 
 ## Afternoon Assignment Link
 
