--- a/reflections/week11/04.md
+++ b/reflections/week11/04.md
@@ -6,6 +6,8 @@
 
 Review and reflect on your experiences in this course, as this is the last lecture before your **final project**. What are your concerns? How do you plan to manage your time? What have you enjoyed most about the course up to this point?
 
+I've really loved getting to know more and more people in the industry. I enjoy working on the front end of projects the most and I find that I really enjoy the logic behind coding. I think for the final I am really going to try to parse out my time so that I am making sure I stay on track. 
+
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/jsphbowers/<ASSIGNMENT_REPO>)**
