--- a/reflections/week11/05.md
+++ b/reflections/week11/05.md
@@ -6,3 +6,5 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 - What did you learn that was a shock or surprise?
 - What are you struggling with?
 - What would you count as a victory?
+
+Reviewing and working on code was really helpful this last week. I think it has put me into a good mindset for the final and knowing what I will need to focus on or make more time for.
