--- a/reflections/week11/01.md
+++ b/reflections/week11/01.md
@@ -8,12 +8,20 @@
 
 1. What does ***inheritance*** accomplish for us in C#?
 
+Inheritance allows us to use sections of code within other sections where the parent code has access to the child code that is embedded within it.
+
 2. How does ***member inheritance*** work in C#? Does a `Class` inherit all members of the base `Class`?
 
+Member inheritance works that only certain things are inherited by the parent class. For instance constructors are not inherited by other classes.
+
 3. How does ***accessibility*** affect inheritance?
+
+Accessibility can help to make it so parent classes can inherit some of the things listed on constructors and other parts of a class that are not necessarily accessible.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/jsphbowers/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
+Working on Allspice has been really helpful to get down what is missing in my knowledge and to practice for the final. I hope I got enough practice with many to many relationships for the final.
